Fix the spacing of the watch picture and description. Add media query for 1024px portrait screens.

--- a/SecretAgentSupply/resources/css/style.css
+++ b/SecretAgentSupply/resources/css/style.css
@@ -10,14 +10,16 @@ body {
   overflow: visible;
 }
 
+/* fix overflow on a desktop view */
+
 .header {
   background-color: black;
   width: auto;
-  top: 0px;
   padding: 0.5rem;
   display: flex;
   flex-direction: row;
   align-items: center;
+  top: 0;
 }
 
 .header img {
@@ -41,6 +43,8 @@ body {
   width: 20rem;
   margin-top: 9rem;
   padding: 2rem 3rem;
+  display: flex;
+  flex-flow: column wrap;
   align-content: space-between;
 }
 
@@ -48,7 +52,7 @@ body {
 
 .banner-title h1 {
   font-size: 2rem;
-  padding-top: 0.25rem;
+  padding: 0.25rem 0;
   flex-wrap: wrap;
 }
 
@@ -66,27 +70,32 @@ body {
 
 #products-container {
   margin-top: 3rem;
+  display: flex;
+  justify-content: space-between;
 }
 
 .products {
   border: 4px solid black;
-  display: inline-flex;
+  display: flex;
   width: 30%;
   flex-direction: column;
 }
 
 .products img {
   padding: 2rem 0;
+  margin: auto;
   max-height: 9rem;
-  width: auto;
+  max-width: 8rem;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
-/* Fix images and captions */
+
 .products p {
   background-color: black;
   padding: 0.5rem 0;
   width: 0 auto;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
@@ -133,4 +142,21 @@ body {
   height: 5rem;
   display: flex;
   align-items: center;
+}
+
+@media only screen and (max-width: 1024px) and (orientation: portrait) {
+  #products-container {
+    overflow: hidden;
+  }
+
+  .products {
+  }
+
+  .location {
+    width: 35%;
+  }
+
+  .hours {
+    width: 35%;
+  }
 }
